# fake-openai-server

./: .env.example  .gitignore  AGENTS.md  LoggerConfig.py  README.md  compose.yaml  embeddings-api-server.py  pyproject.toml  reranker-api-server.py
.github/: pull_request_template.md
.github/workflows/: ci.yaml
Docker/base-server/: Dockerfile
Docker/embeddings-server/: Dockerfile
Docker/reranker-server/: Dockerfile
documents/: commit-review.md  tasks.md
src/fake_openai_server/: __init__.py  app.py  asgi.py  config.py  dependencies.py  errors.py  logging.py  runtime.py
src/fake_openai_server/api/routers/: embeddings.py  health.py  rerank.py
src/fake_openai_server/main/: embeddings.py  reranker.py
src/fake_openai_server/schemas/: embeddings.py  error.py  health.py  rerank.py
src/fake_openai_server/services/: embeddings.py  reranker.py
tests/: test_api.py  test_asgi.py  test_config.py  test_embeddings_service.py  test_reranker_service.py
